--- a/exercise-03.ipynb
+++ b/exercise-03.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "#### Problem 2\n",
     "\n",
-    "Figure out how one makes a deep copy the array `[1, 2]` in Julia."
+    "Figure out how one makes a deep copy of the array `[1, 2]` in Julia."
    ]
   },
   {
