--- a/exercise-03.ipynb
+++ b/exercise-03.ipynb
@@ -15,11 +15,11 @@
     "\n",
     "Checkout the result of the following Julia expressions:\n",
     "\n",
-    "    a) ```x = 0.0; y = 1.0 / x```\n",
+    "a) `x = 0.0; y = 1.0 / x`\n",
     "\n",
-    "    b) ```z = 0.0 / 0.0```\n",
+    "b) `z = 0.0 / 0.0`\n",
     "\n",
-    "    c) ```sqrt(-1)```"
+    "c) `sqrt(-1)`"
    ]
   },
   {
