--- a/julia-05-dictionaries.ipynb
+++ b/julia-05-dictionaries.ipynb
@@ -32,7 +32,7 @@
     }
    },
    "source": [
-    "# Dictionaries\n",
+    "## Dictionaries\n",
     "\n"
    ]
   },
@@ -191,13 +191,6 @@
     "    println(en, \" \", eng2sp[en])\n",
     "end"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
