--- a/julia-01-intro.ipynb
+++ b/julia-01-intro.ipynb
@@ -41,7 +41,9 @@
     "\n",
     "**Julia** is a relatively young (2012) programming language designed to be particularly effective for scientific workflows - the developers specifically call out Fortran and MATLAB as predecessors in this area.\n",
     "\n",
-    "Compared to these, Julia has much of the dynamic and interactive expressiveness of languages such as *Python* (including functionality that is only provided there by the third-party *NumPy* library), whilst leveraging just-in-time compilation and specialization to allow performance approaching (and sometimes better than) high-performance compiled languages such as *C*, *C++*, *Modern Fortran* and *Rust*."
+    "Compared to these, Julia has much of the dynamic and interactive expressiveness of languages such as *Python* (including functionality that is only provided there by the third-party *NumPy* library), whilst leveraging just-in-time compilation and specialization to allow performance approaching (and sometimes better than) high-performance compiled languages such as *C*, *C++*, *Modern Fortran* and *Rust*.\n",
+    "\n",
+    "From https://juliahep.github.io/JuliaHEP-2023/intro.html"
    ]
   },
   {
