--- a/julia-04-arrays.ipynb
+++ b/julia-04-arrays.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,32 +165,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "reflection = [[1, 0] [0, -1]] = [1 0; 0 -1]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"The top-left element of reflection is 1 or 1\""
+       "2×2 Matrix{Int64}:\n",
+       " 1  3\n",
+       " 2  4"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "@show reflection = [ [1,0] [0,-1] ]\n",
-    "\n",
-    "\"\"\"The top-left element of reflection is \n",
-    "$(reflection[1,1]) or $(reflection[begin,begin])\"\"\""
+    "A = [ [1, 2] [3, 4] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A[1,1]  # same as A[begin,begin]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Julia shows 2D arrays as `<rows>x<cols> Array{<type>}`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×2 Matrix{Int64}:\n",
+       " 1  4\n",
+       " 2  5\n",
+       " 3  6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "B = [ 1 4\n",
+    "      2 5 \n",
+    "      3 6 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way of specifying elements row-wise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 Matrix{Int64}:\n",
+       " 1  2  3\n",
+       " 4  5  6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "C = [1 2 3; 4 5 6 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Be aware of these subtile differences:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "D = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×3 Matrix{Int64}:\n",
+       " 1  2  3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "F = [1 2 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "E = [1; 2; 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Vector{Int64}}:\n",
+       " [1, 2]\n",
+       " [3, 4]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [ [1, 2], [3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Matrix{Int64}:\n",
+       " 1  3\n",
+       " 2  4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "A = [ [1, 2] [3, 4]]"
    ]
   },
   {
@@ -206,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -214,21 +408,20 @@
       "text/plain": [
        "2×2×2 Array{Int64, 3}:\n",
        "[:, :, 1] =\n",
-       " 1  2\n",
-       " 0  2\n",
+       " 1  3\n",
+       " 2  4\n",
        "\n",
        "[:, :, 2] =\n",
-       " 3  0\n",
-       " 3  1"
+       " 5  7\n",
+       " 6  8"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "threed_array = [ 1 ; 0 ;; 2 ; 2 ;;; 3 ; 3 ;; 0 ; 1 ] "
+    "threed_array = [ 1 ; 2 ;; 3 ; 4 ;;; 5 ; 6 ;; 7 ; 8 ] "
    ]
   },
   {
@@ -244,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,9 +457,8 @@
        " 4  28  244"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -288,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -352,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,9 +624,8 @@
        "243"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -467,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -478,7 +669,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "view1 = [0 0 0; 1 1 1; 2 8 32; 3 27 243]\n",
+      "view1 = [0 0 0; 1 1 1; 2 8 32; 3 27 88]\n",
       "view1 === view2 === view3 = true\n"
      ]
     },
@@ -488,9 +679,8 @@
        "88"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -521,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
