added some solutions

--- a/exercise-04.ipynb
+++ b/exercise-04.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Write a julia function called `hasduplicates` that takes an array and returns true if there is any element that appears more than once. It should not modify the original array.\n",
     "\n",
-    "Hint: one can onver an array into a [set](https://docs.julialang.org/en/v1/base/collections/#Base.Set)."
+    "Hint: one can convert an array into a [set](https://docs.julialang.org/en/v1/base/collections/#Base.Set)."
    ]
   },
   {
