added exercise for section 11 (multiple dispatch)

--- a/julia-08-control-flow.ipynb
+++ b/julia-08-control-flow.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -416,8 +416,78 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### `break`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first number divisible by 31 in the range 1024 to 1200 is: 1054\n"
+     ]
+    }
+   ],
+   "source": [
+    "start, stop = 1024, 1200\n",
+    "\n",
+    "# find first number between start and stop which is divisible by 31\n",
+    "for i in start:stop\n",
+    "    if i % 31 == 0\n",
+    "        println(\"The first number divisible by 31 \\\n",
+    "                 in the range $start to $stop is: $i\")\n",
+    "        break  # exit once we find the first number divisible by 31\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### `continue`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1054\n",
+      "1085\n",
+      "1116\n",
+      "1147\n",
+      "1178\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print numbers divisible by 31 between start and stop\n",
+    "for i in start:stop\n",
+    "    if i % 31 != 0\n",
+    "        continue  # skip even numbers\n",
+    "    end\n",
+    "    println(i)\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
