--- a/julia-09-scope.ipynb
+++ b/julia-09-scope.ipynb
@@ -113,9 +113,9 @@
       "\n",
       "Stacktrace:\n",
       " [1] f3()\n",
-      "   @ Main ~/uni/Vorlesungen/Julia-Kurs 2024/notebooks/julia-09-scope.ipynb:5\n",
+      "   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-09-scope.ipynb:5\n",
       " [2] top-level scope\n",
-      "   @ ~/uni/Vorlesungen/Julia-Kurs 2024/notebooks/julia-09-scope.ipynb:9"
+      "   @ ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-09-scope.ipynb:9"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
     "    end\n",
     "    j = 0\n",
     "    k = 0\n",
-    "    return ginner(), j, k\n",
+    "    return ginner(), j, k \n",
     "end\n",
     "\n",
     "g1()"
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,9 +272,9 @@
       "\n",
       "Stacktrace:\n",
       " [1] even(n::Int64)\n",
-      "   @ Main ~/uni/Vorlesungen/Julia-Kurs 2024/notebooks/julia-09-scope.ipynb:1\n",
+      "   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-09-scope.ipynb:1\n",
       " [2] top-level scope\n",
-      "   @ ~/uni/Vorlesungen/Julia-Kurs 2024/notebooks/julia-09-scope.ipynb:2"
+      "   @ ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-09-scope.ipynb:2"
      ]
     }
    ],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
