--- a/exercise-16.ipynb
+++ b/exercise-16.ipynb
@@ -70,16 +70,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem 3\n",
-    "\n",
-    "Fit the function $f(x) = \\theta_1 + \\theta_2 x$ to the data points\n",
+    "Fit the function $f(x) = \\theta_1 + \\theta_2 x$ to the following data points:\n",
     "\n",
     "```julia\n",
     "# data\n",
     "x = [-0.6, -0.2, 0.2, 0.6]\n",
     "y = [5., 3., 5., 8.]\n",
     "σy = [2, 1, 1, 2];\n",
-    "```"
+    "```\n",
+    "\n",
+    "Draw an error band around th fitting function reflecting the uncertainty of the fit parameters."
    ]
   }
  ],
