--- a/julia-01-intro.ipynb
+++ b/julia-01-intro.ipynb
@@ -328,7 +328,8 @@
     "* https://juliahep.github.io/JuliaHEP-2023/intro.html\n",
     "* [Julia Course, Lund University](https://www.control.lth.se/education/doctorate-program/julia-course/julia-course-2019/)\n",
     "* [Think Julia](https://benlauwens.github.io/ThinkJulia.jl/latest/book.html)\n",
-    "* https://colab.research.google.com/github/ageron/julia_notebooks/blob/master/Julia_for_Pythonistas.ipynb"
+    "* [Julia_for_Pythonistas.ipynb](https://colab.research.google.com/github/ageron/julia_notebooks/blob/master/Julia_for_Pythonistas.ipynb)\n",
+    "* [Julia for Optimization and Learning (Czech Technical University)](https://juliateachingctu.github.io/Julia-for-Optimization-and-Learning/stable/)"
    ]
   },
   {
@@ -341,9 +342,18 @@
    "source": [
     "## More useful links\n",
     "\n",
+    "General\n",
+    "\n",
     "* Oliver Schulz, [Why Julia? Motivation and comparison to other languages](https://indico.cern.ch/event/1074269/contributions/4539601/attachments/2317518/3945412/why-julia%20slides.pdf)\n",
     "* Jonas Eschle et al., [Potential of the Julia Programming Language for High Energy Physics Computing](https://arxiv.org/pdf/2306.03675), Comput.Softw.Big Sci. 7 (2023) 1, 10 (arXiv 2306.03675)\n",
     "* Jeffrey M. Perkel, [Julia: come for the syntax, stay for the speed](https://www.nature.com/articles/d41586-019-02310-3), Nature 572, 141-142 (2019)\n",
+    "* Matthijs Cox, [How to solve the two language problem?](https://scientificcoder.com/how-to-solve-the-two-language-problem)\n",
+    "\n",
+    "\n",
+    "Practical tips\n",
+    "\n",
+    "* [Julia cheatsheet](https://cheatsheets.quantecon.org/julia-cheatsheet.html)\n",
+    "* [The Fast Track to Julia: A quick and dirty overview](https://cheatsheet.juliadocs.org)\n",
     "* [100 Julia exercises with solutions](https://pythonjulia.blogspot.com/2022/03/100-julia-exercises-with-solutions.html)"
    ]
   }
