--- a/julia-08-control-flow.ipynb
+++ b/julia-08-control-flow.ipynb
@@ -483,7 +483,7 @@
     "# print numbers divisible by 31 between start and stop\n",
     "for i in start:stop\n",
     "    if i % 31 != 0\n",
-    "        continue  # skip even numbers\n",
+    "        continue\n",
     "    end\n",
     "    println(i)\n",
     "end"
