--- a/julia-16-linear-algebra.ipynb
+++ b/julia-16-linear-algebra.ipynb
@@ -273,7 +273,11 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "e3a14532",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# data\n",
