--- a/julia-11-multiple-dispatch.ipynb
+++ b/julia-11-multiple-dispatch.ipynb
@@ -59,9 +59,8 @@
        "30"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -86,15 +85,20 @@
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching multiply(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  multiply(\u001b[91m::Int64\u001b[39m, ::Int64)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[1]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching multiply(::Float64, ::Int64)\n\nClosest candidates are:\n  multiply(!Matched::Int64, ::Int64)\n   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching multiply(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  multiply(\u001b[91m::Int64\u001b[39m, ::Int64)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[1]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[2]:1"
+      "MethodError: no method matching multiply(::Float64, ::Int64)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  multiply(!Matched::Int64, ::Int64)\n",
+      "   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1"
      ]
     }
    ],
@@ -146,9 +150,8 @@
        "multiply (generic function with 2 methods)"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -189,9 +192,8 @@
        "12.0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -210,9 +212,8 @@
        "30"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -243,9 +244,8 @@
        "multiply (generic function with 3 methods)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -266,9 +266,8 @@
        "12.0"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -323,15 +322,20 @@
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching myfunc(::String)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(\u001b[91m::Number\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching myfunc(::String)\n\nClosest candidates are:\n  myfunc(!Matched::Number)\n   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching myfunc(::String)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(\u001b[91m::Number\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[9]:1"
+      "MethodError: no method matching myfunc(::String)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  myfunc(!Matched::Number)\n",
+      "   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1"
      ]
     }
    ],
@@ -365,9 +369,8 @@
        "5"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -389,15 +392,20 @@
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching myfunc(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(::Number)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching myfunc(::Float64, ::Int64)\n\nClosest candidates are:\n  myfunc(::Number)\n   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching myfunc(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(::Number)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[11]:1"
+      "MethodError: no method matching myfunc(::Float64, ::Int64)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  myfunc(::Number)\n",
+      "   @ Main ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/uni/Vorlesungen/Julia-Course-Uni-HD/julia-11-multiple-dispatch.ipynb:1"
      ]
     }
    ],
@@ -429,9 +437,8 @@
        "RelativisticSpeed(0.994475138121547)"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -459,15 +466,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.10.2",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.10.2"
   }
  },
  "nbformat": 4,
