--- a/julia-12-broadcasting.ipynb
+++ b/julia-12-broadcasting.ipynb
@@ -46,10 +46,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6aede516",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Vector{Int64}:\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6\n",
+       " 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "myarray = [1,2,3,4,5]\n",
     "2 .+ myarray"
@@ -71,10 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2bfb50be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 Matrix{Int64}:\n",
+       " 2  4  6\n",
+       " 5  7  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = [1 2 3; 4 5 6]        # 2x3 matrix\n",
     "B = transpose([1, 2, 3])  # 1x3 matrix  \n",
@@ -97,10 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8cd98d02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 2  3  4\n",
+       " 3  4  5\n",
+       " 4  5  6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = [1 2 3]\n",
     "A' .+ A"
@@ -140,17 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e934460f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       "  1\n",
+       "  8\n",
+       " 27"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "[1, 2, 3] .^ 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "e70ec166",
    "metadata": {},
    "outputs": [
@@ -174,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "c123474b",
    "metadata": {},
    "outputs": [
@@ -218,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "3adb4f6e",
    "metadata": {},
    "outputs": [
@@ -245,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "5eb8c2e9",
    "metadata": {
     "slideshow": {
