--- a/julia-01-intro.ipynb
+++ b/julia-01-intro.ipynb
@@ -301,7 +301,7 @@
     }
    },
    "source": [
-    "## Prospects for Julia High Energy Physics\n",
+    "## Prospects for Julia in High Energy Physics\n",
     "\n",
     "Widely used programming languages in physics (from [Jim Pivarski, IRIS-HEP](https://indico.cern.ch/event/1074269/contributions/4539625/attachments/2316596/3943743/main.pdf)): \n",
     "\n",
