added C and C++ part

--- a/julia-21-other-languages.ipynb
+++ b/julia-21-other-languages.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d2b70d4f",
    "metadata": {},
    "outputs": [],
@@ -51,20 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fe665749",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "v\"3.10.14\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get Python version information\n",
     "PyCall.pyversion"
@@ -72,20 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ce0002e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7071067811865475"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "math = pyimport(\"math\")\n",
     "math.sin(math.pi / 4) # returns ≈ 1/√2 = 0.70710678..."
@@ -107,18 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2215f5d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "correlation coefficient: 0.6888467201936643\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = [-0.6, -0.2, 0.2, 0.6]\n",
     "y = [5., 3., 5., 8.]\n",
@@ -131,6 +103,191 @@
     "\n",
     "corrcoef_numpy = py\"corrcoef_numpy\"\n",
     "println(\"correlation coefficient: $(corrcoef_numpy(x,y))\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce680203",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## C\n",
+    "\n",
+    "One can use the `@ccall` macro:\n",
+    "\n",
+    "```julia\n",
+    "@ccall library.function_name(argvalue1::argtype1, ...)::returntype\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1446a0d3",
+   "metadata": {},
+   "source": [
+    "Here is an example:\n",
+    "```C\n",
+    "#include <stdio.h>\n",
+    "\n",
+    "void say_y(int y) {\n",
+    "    printf(\"Hello from C: got y = %d.\\n\", y);\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Create a shared library. My command (on a MacBook Air M2):\n",
+    "`gcc -shared -o mylib.dylib -fPIC mylib.c`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82b62ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from C: got y = 5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "@ccall \"./misc/mylib.dylib\".say_y(5::Cint)::Cvoid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8df737d3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## C++\n",
+    "\n",
+    "For using C++ libraries, we use ['CxxWrap'](https://github.com/JuliaInterop/CxxWrap.jl). Here is the example from the CxxWrap documentation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ade99ab5",
+   "metadata": {},
+   "source": [
+    "`hello.cpp` in directory `hello`:\n",
+    "\n",
+    "```C++\n",
+    "#include <string>\n",
+    "\n",
+    "#include \"jlcxx/jlcxx.hpp\"\n",
+    "\n",
+    "std::string greet() {\n",
+    "   return \"hello, world\";\n",
+    "}\n",
+    "\n",
+    "JLCXX_MODULE define_julia_module(jlcxx::Module& mod) {\n",
+    "  mod.method(\"greet\", &greet, \"documentation for greet\");\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ee4b1e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<style>\n",
+    "/* Set font size for paragraphs */\n",
+    "p {\n",
+    "    font-size: 16px; /* Adjust as needed */\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "It is convenient to use cmake. Here is `CMakeLists.txt`:\n",
+    "\n",
+    "```cmake\n",
+    "project(hello)\n",
+    "\n",
+    "cmake_minimum_required(VERSION 3.5)\n",
+    "set(CMAKE_MACOSX_RPATH 1)\n",
+    "set(CMAKE_LIBRARY_OUTPUT_DIRECTORY \"${CMAKE_BINARY_DIR}/lib\")\n",
+    "\n",
+    "find_package(JlCxx)\n",
+    "get_target_property(JlCxx_location JlCxx::cxxwrap_julia LOCATION)\n",
+    "get_filename_component(JlCxx_location ${JlCxx_location} DIRECTORY)\n",
+    "set(CMAKE_INSTALL_RPATH \"${CMAKE_INSTALL_PREFIX}/lib;${JlCxx_location}\")\n",
+    "\n",
+    "message(STATUS \"Found JlCxx at ${JlCxx_location}\")\n",
+    "\n",
+    "add_library(hello SHARED hello.cpp)\n",
+    "\n",
+    "target_link_libraries(hello JlCxx::cxxwrap_julia)\n",
+    "\n",
+    "install(TARGETS\n",
+    "  hello\n",
+    "LIBRARY DESTINATION lib\n",
+    "ARCHIVE DESTINATION lib\n",
+    "RUNTIME DESTINATION lib)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b310797c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.CppHello"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "module CppHello\n",
+    "  using CxxWrap\n",
+    "  @wrapmodule(() -> joinpath(\"./misc/build/lib\",\"libhello\"))\n",
+    "\n",
+    "  function __init__()\n",
+    "    @initcxx\n",
+    "  end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ab9cc19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"hello, world\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "CppHello.greet()"
    ]
   }
  ],
